--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Source: https://github.com/github/gitignore/blob/master/Android.gitignore
-
+/
 # Built application files
 *.apk
 *.ap_
@@ -43,6 +43,7 @@ captures/
 .idea/modules.xml
 .idea/dictionaries
 .idea/libraries
+.idea/inspectionProfiles
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
